--- a/index.html
+++ b/index.html
@@ -9,17 +9,29 @@
       }
     </style>
     <link rel="stylesheet" href="./css/master.css">
-
-
-
   </head>
   <body>
     <table>
-      <tr>
-        <th>Name</th>
-        <th>Data</th>
+      <tr class="tr-th">
+        <th class="Name-th1">Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13"></th>
+        <th class="Data-th1">Data</th>
+        <th class="three-dots-th1"></th>
       </tr>
-    </table>
+    <tr>
+      <td class="name">File.pdf</td>
+      <td class="Data">3 mins ago</td>
+      <td class="dots"><img class="tree-dots"src=./icons/3-dots-gr.svg /></td>
+    </tr>
+    <tr>
+      <td class="name">File.pdf</td>
+      <td class="data">Yesterday</td>
+      <td class="dots"><img class="tree-dots"src=./icons/3-dots-gr.svg /></td>
+    </tr>
+    <tr style="border-style:hidden">
+      <td class="name" style="border-style:hidden">File.pdf</td>
+      <td class="data" style="border-style:hidden">File.pdf>June 1st, 2019</td>
+      <td class="dots" style="border-style:hidden"><img class="tree-dots"src=./icons/3-dots-gr.svg /></td>
+    </tr>
 
 
   </body>
