--- a/index.html
+++ b/index.html
@@ -33,6 +33,49 @@
       <td class="dots" style="border-style:hidden"><img class="tree-dots"src=./icons/3-dots-gr.svg /></td>
     </tr>
 
+    <table>
+      <tr class="tr-th">
+        <th class="Name-th1"><input type="checkbox" name="" value="" checked> Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13"></th>
+        <th class="Data-th1">Data</th>
+        <th class="three-dots-th1"></th>
+      </tr>
+    <tr>
+      <td class="name"><input type="checkbox" name="" value=""> File.pdf</td>
+      <td class="Data">3 mins ago</td>
+      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+    </tr>
+    <tr>
+      <td class="name"><input type="checkbox" name="" value="" checked> File.pdf</td>
+      <td class="data">Yesterday</td>
+      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+    </tr>
+    <tr style="border-style:hidden">
+      <td class="name" style="border-style:hidden"><input type="checkbox" name="" value=""> File.pdf</td>
+      <td class="data" style="border-style:hidden">File.pdf>June 1st, 2019</td>
+      <td class="dots" style="border-style:hidden"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+    </tr>
+
+    <table>
+      <tr class="tr-th">
+        <th class="Name-th1">Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13"></th>
+        <th class="Data-th3">Data</th>
+        <th class="search-th3"></th>
+      </tr>
+    <tr>
+      <td class="name"><img class="inbox"src=./icons/inbox.svg />  File.pdf</td>
+      <td class="Data">3 mins ago</td>
+      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+    </tr>
+    <tr>
+      <td class="name"><img class="inbox"src=./icons/inbox.svg />  File.pdf</td>
+      <td class="data">Yesterday</td>
+      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+    </tr>
+    <tr style="border-style:hidden">
+      <td class="name" style="border-style:hidden"><img class="inbox"src=./icons/inbox.svg />  File.pdf</td>
+      <td class="data" style="border-style:hidden">File.pdf>June 1st, 2019</td>
+      <td class="dots" style="border-style:hidden"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+    </tr>
 
   </body>
 </html>
