--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>hw-css-04</title>
-    <style>
-      body {
-        padding: 30px;
-      }
-    </style>
     <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
@@ -59,7 +54,7 @@
       <tr class="tr-th">
         <th class="Name-th1">Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13"></th>
         <th class="Data-th3">Data</th>
-        <th class="search-th3"></th>
+        <th class="search-th3"><input class="search" type="text" name="search" placeholder="  Search"></th>
       </tr>
     <tr>
       <td class="name"><img class="inbox"src=./icons/inbox.svg />  File.pdf</td>
