--- a/index.html
+++ b/index.html
@@ -8,69 +8,72 @@
   <body>
     <table>
       <tr class="tr-th">
-        <th class="Name-th1">Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13"></th>
+        <th class="Name-th1">Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13" alt="triangle" ></th>
         <th class="Data-th1">Data</th>
         <th class="three-dots-th1"></th>
       </tr>
     <tr>
       <td class="name">File.pdf</td>
       <td class="Data">3 mins ago</td>
-      <td class="dots"><img class="tree-dots"src=./icons/3-dots-gr.svg /></td>
+      <td class="dots"><img class="tree-dots" src=./icons/3-dots-gr.svg alt="three dots" /></td>
     </tr>
     <tr>
       <td class="name">File.pdf</td>
       <td class="data">Yesterday</td>
-      <td class="dots"><img class="tree-dots"src=./icons/3-dots-gr.svg /></td>
+      <td class="dots"><img class="tree-dots" src=./icons/3-dots-gr.svg alt="three dots" /></td>
     </tr>
     <tr style="border-style:hidden">
       <td class="name" style="border-style:hidden">File.pdf</td>
       <td class="data" style="border-style:hidden">File.pdf>June 1st, 2019</td>
-      <td class="dots" style="border-style:hidden"><img class="tree-dots"src=./icons/3-dots-gr.svg /></td>
+      <td class="dots" style="border-style:hidden"><img class="tree-dots" src=./icons/3-dots-gr.svg alt="three dots" /></td>
     </tr>
+  </table>
 
     <table>
       <tr class="tr-th">
-        <th class="Name-th1"><input type="checkbox" name="" value="" checked> Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13"></th>
+        <th class="Name-th1"><input type="checkbox" name="0" value="0" checked> Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13" alt="white turn triangle" ></th>
         <th class="Data-th1">Data</th>
         <th class="three-dots-th1"></th>
       </tr>
     <tr>
-      <td class="name"><input type="checkbox" name="" value=""> File.pdf</td>
+      <td class="name"><input type="checkbox" name="1" value="1"> File.pdf</td>
       <td class="Data">3 mins ago</td>
-      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+      <td class="dots"><img class="tree-dots" src=./icons/3-dots-wh.svg alt="three dots" /></td>
     </tr>
     <tr>
-      <td class="name"><input type="checkbox" name="" value="" checked> File.pdf</td>
+      <td class="name"><input type="checkbox" name="2" value="2" checked> File.pdf</td>
       <td class="data">Yesterday</td>
-      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+      <td class="dots"><img class="tree-dots" src=./icons/3-dots-wh.svg alt="three dots" /></td>
     </tr>
     <tr style="border-style:hidden">
-      <td class="name" style="border-style:hidden"><input type="checkbox" name="" value=""> File.pdf</td>
+      <td class="name" style="border-style:hidden"><input type="checkbox" name="3" value="3"> File.pdf</td>
       <td class="data" style="border-style:hidden">File.pdf>June 1st, 2019</td>
-      <td class="dots" style="border-style:hidden"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+      <td class="dots" style="border-style:hidden"><img class="tree-dots" src=./icons/3-dots-wh.svg alt="three dots" /></td>
     </tr>
+  </table>
 
     <table>
       <tr class="tr-th">
-        <th class="Name-th1">Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13"></th>
+        <th class="Name-th1">Name<img class="triangle" src=./icons/turn-triangle-wh.svg width="13" alt="white turn triangle" ></th>
         <th class="Data-th3">Data</th>
         <th class="search-th3"><input class="search" type="text" name="search" placeholder="  Search"></th>
       </tr>
     <tr>
-      <td class="name"><img class="inbox"src=./icons/inbox.svg />  File.pdf</td>
+      <td class="name"><img class="inbox" src=./icons/inbox.svg alt="inbox" />  File.pdf</td>
       <td class="Data">3 mins ago</td>
-      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+      <td class="dots"><img class="tree-dots" src=./icons/3-dots-wh.svg alt="three dots" /></td>
     </tr>
     <tr>
-      <td class="name"><img class="inbox"src=./icons/inbox.svg />  File.pdf</td>
+      <td class="name"><img class="inbox" src=./icons/inbox.svg alt="inbox" />  File.pdf</td>
       <td class="data">Yesterday</td>
-      <td class="dots"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+      <td class="dots"><img class="tree-dots" src=./icons/3-dots-wh.svg alt="three dots" /></td>
     </tr>
     <tr style="border-style:hidden">
-      <td class="name" style="border-style:hidden"><img class="inbox"src=./icons/inbox.svg />  File.pdf</td>
+      <td class="name" style="border-style:hidden"><img class="inbox" src=./icons/inbox.svg alt="inbox" />  File.pdf</td>
       <td class="data" style="border-style:hidden">File.pdf>June 1st, 2019</td>
-      <td class="dots" style="border-style:hidden"><img class="tree-dots"src=./icons/3-dots-wh.svg /></td>
+      <td class="dots" style="border-style:hidden"><img class="tree-dots" src=./icons/3-dots-wh.svg alt="three dots" /></td>
     </tr>
+  </table>
 
   </body>
 </html>
